# decomposition-library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: decomposition-types.h  decomposition.h
src/: decomposition-base.h  edge-intersection.cpp  polygon-decomposition.cpp  polygon-tree.cpp  triangulation.cpp
test/: CMakeLists.txt
test/src/: edge-intersection-test.cpp  polygon-decomposition-test.cpp  polygon-tree-test.cpp  triangulation-test.cpp
